semgrep/tests/e2e/snapshots/test_rule_parser/test_rule_parser__failure__error_messages/bad2/error.txt
error: extra top-level key
  --> rules/syntax/bad2.yaml:3
1 | rules:
2 |   - id: eqeq-is-bad
3 |     pattern-inside: foo(...)
  |     ^^^^^^^^^^^^^^
4 |     patterns:
5 |       - pattern-not: 1 == 1
= help: Only ['equivalences', 'fix', 'id', 'languages', 'message', 'metadata', 'paths', 'pattern', 'pattern-either', 'pattern-regex', 'patterns', 'severity'] are valid keys
rules/syntax/bad2.yaml has an invalid top-level rule key: ['pattern-inside']

run with --strict and there were 1 errors loading configs
